opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage:     "https://github.com/mirage/mirage-fs"
doc:          "https://mirage.github.io/mirage-fs/"
license:      "ISC"
dev-repo:     "https://github.com/mirage/mirage-fs.git"
bug-reports:  "https://github.com/mirage/mirage-fs/issues"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "fmt"
  "mirage-device" {>= "1.0.0"}
]

available: [ ocaml-version >= "4.04.2"]
