opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage:     "https://github.com/mirage/mirage-fs"
doc:          "https://mirage.github.io/mirage-fs/"
license:      "ISC"
dev-repo:     "git+https://github.com/mirage/mirage-fs.git"
bug-reports:  "https://github.com/mirage/mirage-fs/issues"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {build}
  "fmt"
  "mirage-device" {>= "1.0.0"}
]

synopsis: "MirageOS signatures for filesystem devices"
